<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    
    <string name="glide_text">Glide - Image Loading Library by Bump Tech</string>
    <string name="loadapp_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="download_text">Download</string>
    <string name="downloading_text">Loading...</string>
    <string name="select_text">Select anyone to download</string>
    <string name="download_notification_channel_id">download</string>
    <string name="download_notification_channel_name">download</string>
    <string name="download_complete">Download Complete</string>

    <string name="filename_label">File Name :</string>
    <string name="status_label">Status :</string>
    <string name="ok_text">OK</string>
    <string name="notification_success_text">Repository is downloaded successfully</string>
    <string name="notification_fail_text">Repository download failed</string>

    <string name="check_status_button_text">Check Status</string>
</resources>
